<resources>
    <string name="app_name">Calculadora de IMC</string>
    <string name="preeliminatorylabs">PreeliminatoryLabs</string>
    <string name="from">from</string>
    <string name="image_description">Splash Screen Image</string>
    <string name="backlog">Registro de Actividad</string>
    <string name="get_clients">Informacion de Clientes</string>
    <string name="post_clients">Registro de Clientes</string>
    <string name="put_clients">Actualizar Registros</string>
    <string name="about">Información de uso</string>
    <string name="dev_email">cdmejiam94@gmail.com</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="imc_calculator_main_label">Calcule su IMC</string>
    <string name="hint_name">Ingrese su Nombre</string>
    <string name="hint_age">Ingrese su edad</string>
    <string name="hint_weight">Ingrese su peso (KG)</string>
    <string name="hint_genre">Ingrese su género (H o M)</string>
    <string name="hint_height">Ingrese su altura (mts)</string>
    <string name="btn_calculate_imc">Calcular</string>
    <string name="post_clients_main_label">Registro</string>
    <string name="hint_last_name">Ingrese sus Apellidos</string>
    <string name="hint_user_name">Ingrese su nombre de usuario</string>
    <string name="hint_email">Ingrese su correo</string>
    <string name="hint_password">Ingrese su contraseña</string>
    <string name="hint_geb">Gasto Energético Bruto (GEB)</string>
    <string name="btn_update_clients">Actualizar</string>
    <string name="hint_id_client">Ingrese el Id del usuario</string>
    <string name="update_client_main_label">Actualizar Registro</string>
    <string name="btn_add_client">Enviar</string>
    <string name="bl_name">NOMBRE(S)</string>
    <string name="bl_last">APELLIDO(S)</string>
    <string name="bl_age">EDAD</string>
    <string name="bl_genre">GENERO</string>
    <string name="bl_weight">PESO</string>
    <string name="bl_height">ALTURA</string>
    <string name="bl_user">USUARIO</string>
    <string name="bl_email">EMAIL</string>
    <string name="bl_passwd">CONTRASEÑA</string>
    <string name="bl_id_client">ID CLIENTE</string>
    <string name="bl_geb">GEB</string>
    <string name="bl_id">ID:</string>
    <string name="bl_type">TIPO USO</string>
    <string name="bl_id_label">ID</string>
    <string name="bl_label_type">TIPO DE USO:</string>
    <string name="bl_label_id_client">ID CLIENTE:</string>
    <string name="bl_label_name">Nombre(s):</string>
    <string name="bl_label_last">Apellido(s):</string>
    <string name="bl_label_user">Usuario:</string>
    <string name="bl_label_email">Correo:</string>
    <string name="bl_label_passwd">Contraseña:</string>
    <string name="bl_label_age">Edad:</string>
    <string name="bl_label_genre">Género:</string>
    <string name="bl_label_height">Altura:</string>
    <string name="bl_label_geb">GEB:</string>
    <string name="bl_label_weight">Peso:</string>
</resources>
