<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/edtAge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLabelCalculator" />

        <EditText
            android:id="@+id/edtAge"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_age"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/edtGenre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtName" />

        <EditText
            android:id="@+id/edtWeight"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_weight"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/edtHeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtGenre" />

        <EditText
            android:id="@+id/edtGenre"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="1"
            android:hint="@string/hint_genre"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/edtWeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtAge" />

        <EditText
            android:id="@+id/edtHeight"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_height"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/btnCalculateIMC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtWeight" />

        <Button
            android:id="@+id/btnCalculateIMC"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_calculate_imc"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtHeight" />

        <TextView
            android:id="@+id/txtLabelCalculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imc_calculator_main_label"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/main_label_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edtName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>